# open-whiteboard

./: .gitignore  CMakeLists.txt  ColorPicker.qml  Toolbar.qml  WidthPicker.qml  main.cpp  main.qml  mousememory.cpp  mousememory.h  qml.qrc  readme.md  whiteboard.cpp  whiteboard.h
components/: ColorPalette.qml
